--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --env-file=.env app.js",
-    "dev": "node --env-file=-env --watch app.js"
+    "dev": "node --env-file=.env --watch app.js"
   },
   "author": "",
   "license": "ISC",
